# repleet_backend

./: .gitignore  Dockerfile  cloudbuild.yaml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  wsgi.py
admin_management/: models.py  serializers.py  swagger_schemas.py  urls.py  views.py
admin_management/migrations/: 0001_initial.py
audio_analysis/: apps.py  performance.py  prompt.py  swagger_schemas.py  tasks.py  urls.py  utils.py  views.py
audio_management/: apps.py  models.py  serializers.py  swagger_schemas.py  urls.py  views.py
audio_management/migrations/: 0001_initial.py  0002_referencetracks.py  0003_alter_audiotrack_name.py  0004_delete_referencetracks.py  0005_myreferencetracks.py  0006_alter_audiotrack_audio_file.py
authentication/: models.py  serializers.py  swagger_schemas.py  tasks.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_userverification.py  0003_customuser_interest.py
call_response/: apps.py  models.py  serializers.py  urls.py  views.py
call_response/migrations/: 0001_initial.py  0002_session_teacher_alter_session_user.py  0003_session_status.py  0004_alter_session_teacher_alter_session_user_mysession.py
challenge/: models.py  serializers.py  swagger_schemas.py  urls.py  views.py
competition/: models.py  serializers.py  swagger_schemas.py  urls.py  views.py
media/: Guitar Easy.unknown  Guitar Medium.unknown  Guitar hard.unknown  Piano Easy.unknown  Piano Hard.unknown  Piano Medium.unknown  Vocal Medium.unknown
repleet_backend/: asgi.py  celery.py  settings.py  urls.py
(+2 files in other folders)
